--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@propeldata/ui-kit": "^0.0.0-canary-20240821144633",
+    "@propeldata/ui-kit": "^0.7.0",
     "@radix-ui/colors": "^3.0.0",
     "@radix-ui/themes": "^3.1.3",
     "next": "14.2.5",
